# skesa-rs

./: .gitignore  Cargo.toml  README.md  build.rs  ccc_mapping.toml
analysis/: skesa_complexity_map.toml
benches/: kmer_bench.rs
examples/: streaming_noodles.rs
ffi/: hash_test_wrapper.cpp  hash_test_wrapper.h  skesa_wrapper.cpp  skesa_wrapper.h
scripts/: download-real-world-fixtures.py
src/: api.rs  assembler.rs  assembly_stats.rs  bloom_filter.rs  clean_reads.rs  concurrent_hash.rs  contig.rs  contig_output.rs  counter.rs  cross_validation.rs  db_graph.rs  ffi.rs  flat_counter.rs  genetic_code.rs  gfa.rs  glb_align.rs  graph_digger.rs  graph_io.rs  guided_assembly.rs  guided_graph.rs  guided_path.rs  hash_graph_output.rs  histogram.rs  kmer.rs  kmer_counter.rs  kmer_lookup.rs  kmer_output.rs  large_int.rs  lib.rs  linked_contig.rs  main.rs  model.rs  nuc_prot_align.rs  output.rs  paired_reads.rs  read_holder.rs  reads_getter.rs  rlimit.rs  snp_discovery.rs  sorted_counter.rs  (+2 more)
tests/: edge_cases.rs  integration_tests.rs
tests/cpp/: alignment_exhaustive_probe.cpp  alignment_probe.cpp  canonical_probe.cpp  load_hash_graph_filter.cpp  load_sorted_graph.cpp  oahash_probe.cpp  read_holder_probe.cpp
tests/data/: adjacent_snp_reads.fasta  ambiguous_reads.fasta  deletion_bubble_reads.fasta  expected_adjacent_snp_allow_snps_all.fasta  expected_adjacent_snp_allow_snps_contigs.fasta  expected_adjacent_snp_allow_snps_hist.txt  expected_ambiguous_hist_k5.txt  expected_contigs.fasta  expected_deletion_bubble_allow_snps_all.fasta  expected_deletion_bubble_allow_snps_contigs.fasta  expected_deletion_bubble_allow_snps_hist.txt  expected_gfa_connector_ambiguous.gfa  expected_gfa_connector_break.gfa  expected_gfa_connector_direct.csv  expected_gfa_connector_direct.gfa  expected_gfa_connector_pair.gfa  expected_gfa_connector_rc.gfa  expected_hist.txt  expected_hist_min1.txt  (+100 more)
(+1 files in other folders)
