[package]
name = "skesa-rs"
version = "0.1.0"
edition = "2021"
description = "Rust port of NCBI's SKESA genome assembler"
license = "Unlicense"
readme = "README.md"
documentation = "https://docs.rs/skesa-rs"
keywords = ["bioinformatics", "assembly", "genome", "kmer", "debruijn"]
categories = ["science", "command-line-utilities"]
include = [
    "benches/kmer_bench.rs",
    "build.rs",
    "examples/streaming_noodles.rs",
    "src/**/*.rs",
    "tests/data/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "SKESA/LICENSE",
    "SKESA/README.md",
]

[features]
default = []
cli = ["dep:clap"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
noodles = { version = "0.109", features = ["fasta", "fastq"] }
flate2 = "1"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "skesa-rs"
required-features = ["cli"]

[[bench]]
name = "kmer_bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
